--- a/app/views/facilities/_map_show.html.erb
+++ b/app/views/facilities/_map_show.html.erb
@@ -31,7 +31,7 @@ function initialize() {
     }
 
     <% @nearby.each_with_index do |n,index| -%>
-    <% info = escape_javascript(link_to(n.full_name,n) + "<br />" + comma_to_br(h(n.address))) -%>
+    <% info = escape_javascript(link_to(h(n.full_name),facility_slug_path(n.slug)) + "<br />" + comma_to_br(h(n.address))) -%>
     map.addOverlay(createMarker(<%= "#{n.lat}, #{n.lng}, #{index+1}" %>, "<%= @status_manager.status(n).downcase %>", "<%= info %>"));
     <% end -%>
 
