--- a/app/views/search/_map_search.html.erb
+++ b/app/views/search/_map_search.html.erb
@@ -55,7 +55,7 @@ function initialize() {
     <% @facilities.each_with_index do |n, index| -%>
     <% num = @facilities.offset + index + 1
        break if num > SearchController::RESULTS_LIMIT %>
-    <% info = escape_javascript(link_to(n.full_name,n) + "<br />" + comma_to_br(n.address)) -%>
+    <% info = escape_javascript(link_to(h(n.full_name),facility_slug_path(n.slug)) + "<br />" + comma_to_br(h(n.address))) -%>
     var marker = createMarker(<%= "#{n.lat}, #{n.lng} , #{num}" %>, "<%= @status_manager.status(n).downcase %>", "<%= info %>");
     map.addOverlay(marker);
     <% if index < 5 %>
